# termoil

./: CLAUDE.md  Cargo.toml  PRD.md  README.md
src/: main.rs  pty.rs  tmux.rs  ui.rs  watchdog.rs
