[package]
name = "termoil"
version = "0.1.0"
edition = "2021"
description = "Less friction for your multi-agent workflow"
license = "MIT"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
anyhow = "1"
nix = { version = "0.29", features = ["term", "process", "fs"] }
libc = "0.2"
regex = "1"
vt100 = "0.15"
