[package]
name = "termoil"
version = "0.1.0"
edition = "2021"
description = "Less friction for your multi-agent workflow"
license = "MIT"
repository = "https://github.com/fantom845/termoil"
homepage = "https://github.com/fantom845/termoil"
keywords = ["terminal", "multiplexer", "tui", "ai", "agent"]
categories = ["command-line-utilities"]

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
nix = { version = "0.29", features = ["term", "process", "fs", "signal"] }
libc = "0.2"
regex = "1"
vt100 = "0.15"
